Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigMinus-9.calc
a .0E- b 1.E- c 2.3E- d 34.5E- e 6.78E- f 99.99E- g 3E- h 76E-
